Bug 162677 - subtitles (and possibly other tracks) do not show up when first playing
Summary: subtitles (and possibly other tracks) do not show up when first playing
Status: RESOLVED FIXED
Alias: None
Product: Phonon
Classification: Frameworks and Libraries
Component: Xine backend (show other bugs)
Version: 4.3.0 (KDE 4.2.0)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Matthias Kretz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-26 22:56 UTC by Chuck Miller
Modified: 2010-02-10 10:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chuck Miller 2008-05-26 22:56:42 UTC
Version:           2.0 (using Devel)
Installed from:    Compiled sources
Compiler:          g++ (GCC) 4.2.3 (Debian 4.2.3-5) 
OS:                Linux

When playing a file (tested on mkv, though it might effect other formats) with subtitles, the option to select which subtitle does not become open (or even listed) until the subtitles start playing.

For example, playing a file that has a opening scene before it starts the main video, it will not even list that the subtitle track exists until it gets to the main video.

This differs from mplayer and kaffine (and most likely every other media player out there).

The option to select which subtitle track to use should be open from the start of the video.

Though I have not tested it, its also possible that this could effect audio and other tracks that start part way into the file.
Comment 1 Fabio Locati 2008-05-26 23:12:21 UTC
we take the subtitles tracks from phonon.
This is a phonon bug.
I move to phonon
Comment 2 Chuck Miller 2008-05-27 00:58:01 UTC
I have been told that its not possible to get subtitle tracks xine until they are reached.  

I don't know if there s any kind of workaround for this, but this is highly frustrating since you have to wait until the subtitles are reached, turn them on, and rewind to catch the first part when subtitles first started.

It does not effect usability, just very annoying.  
Comment 3 Chuck Miller 2008-05-27 15:00:04 UTC
I reported it

On Tue, May 27, 2008 at 5:23 AM, Matthias Kretz <kretz@kde.org> wrote:
[bugs.kde.org quoted mail]
Comment 4 Dmitry Suzdalev 2008-05-28 10:40:47 UTC
SVN commit 813605 by dimsuz:

Update scores when starting a new game

BUG: 162677


 M  +11 -13    mainwindow.cpp  
 M  +2 -1      mainwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=813605
Comment 5 Dmitry Suzdalev 2008-05-28 10:46:29 UTC
Oopps, sorry guys - set a wrong bug number in my commit log message.
Reopening...
Comment 6 Dmitry Suzdalev 2008-05-28 10:49:56 UTC
Oopps, sorry guys - set a wrong bug number in my commit log message.
Reopening...
Comment 7 Dmitry Suzdalev 2008-05-28 10:50:40 UTC
And now bugzilla hanged :) Sorry again.
Comment 8 Myriam Schweingruber 2009-12-12 00:04:31 UTC
Chuck, this report is quite old, can you still reproduce it with a current KDE 4.3.4 or 4.4 beta 1 version?
Comment 9 Myriam Schweingruber 2010-02-10 10:42:01 UTC
Closing for lack of feedback. Please only reopen this report if you can reproduce this in current KDE SC 4.4