Update scores when starting a new game

BUG: 162677

svn path=/trunk/KDE/kdegames/kreversi/; revision=813605