mainwindow.h
@@ -56,7 +56,8 @@ private:
     virtual void showEvent( QShowEvent* );
     void setupActions();
     void loadSettings();
-    QString opponentName();
+    QString opponentName() const;
+    void updateScores();
 
     KReversiScene *m_scene;
     KReversiView  *m_view;
